
[package]
name = "easywind_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# workspace
easywind = { path = "../easywind" }

# async 
futures = "0.3.28"
tokio = {version = "1.30", features = ["rt-multi-thread", "macros"]}

# logging
log = "0.4"
pretty_env_logger = "0.5"

# error handling
color-eyre = "0.6"
eyre = "0.6"

clap = { version = "4.3.21", features = ["derive", "unstable-styles"] }
anstyle = "1.0.1"
