[package]
authors = ["Praveen Perera <praveen@avencera.com>"]
name = "easywind"
description = "EasyWind CLI library"

version = "0.2.0"
edition = "2021"

license = "Apache-2.0"
repository = "https://github.com/avencera/easywind"
homepage = "https://github.com/avencera/easywind"
documentation = "https://docs.rs/easywind"

[features]
dev = ["minijinja/loader"]

[dependencies]
# async 
futures = "0.3.28"
tokio = {version = "1.32", features = ["rt-multi-thread", "macros"]}

# error handling
color-eyre = "0.6"
eyre = "0.6"
thiserror = "1.0"

# http
axum = "0.6.20"
tower-http = { version = "0.4", features = ["fs", "set-header"] }
tower = "0.4.13"
http = "0.2.9"
ureq = "2.7.1"

# livereload
tower-livereload = { version = "0.8"}
notify-debouncer-mini = "0.3.0"

# templating 
minijinja = "1.0"
include_dir = "0.7.3"

# logging
log = "0.4"
pretty_env_logger = "0.5"

# utils
open = "5.0.0"
mime_guess = "2.0.4"
once_cell = "1.18.0"
strum = { version = "0.25.0", features = ["derive"] }

# external clis
duct = "0.13.6"
which = "4.4.0"

# config / download dir
etcetera = "0.8.0"
