
[package]
authors = ["Praveen Perera <praveen@avencera.com>"]
name = "easywind_cli"
description  = "EasyWind - The easiest way to get started with Tailwind CSS"

version = "0.2.0"
edition = "2021"

license = "Apache-2.0"
repository = "https://github.com/avencera/easywind"
homepage = "https://github.com/avencera/easywind"
documentation = "https://docs.rs/easywind"

[dependencies]
# workspace
# easywind = "0.1.2"
easywind = { path = "../easywind/" }

# async 
futures = "0.3.28"
tokio = {version = "1.32", features = ["rt-multi-thread", "macros"]}

# logging
log = "0.4"
pretty_env_logger = "0.5"

# error handling
color-eyre = "0.6"
eyre = "0.6"

clap = { version = "4.3.22", features = ["derive", "unstable-styles"] }
anstyle = "1.0.1"

[[bin]]
name = "easywind"
path = "src/main.rs"
